阅读完 padding数据部分代码

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.analysis.extraPaths": [
-        "./layoutlmft/layoutlmft/data"
+        "./layoutlmft/layoutlmft/data",
+        "./layoutlmft/data"
     ]
 }
